--- a/MobilReklame/MobilReklame/Views/MainPage.xaml
+++ b/MobilReklame/MobilReklame/Views/MainPage.xaml
@@ -5,9 +5,42 @@
     xmlns:local="using:MobilReklame"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:interop="using:Windows.UI.Xaml.Interop"
     mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+            <RowDefinition Height="895"/>
+        </Grid.RowDefinitions>
+        <Button Content="Button" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="22,24,-126,-91" Grid.RowSpan="2" VerticalAlignment="Top" Height="67" Width="104"/>
+        <Button Content="Button" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="142,24,-246,-87" Grid.RowSpan="2" VerticalAlignment="Top" Height="67" Width="104"/>
+        <TextBox Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="402,44,-583,-76" Grid.RowSpan="2" Text="TextBox" VerticalAlignment="Top" Width="181" >
+            <TextBox.RenderTransform>
+                <CompositeTransform Rotation="0.402"/>
+            </TextBox.RenderTransform>
+        </TextBox>
+        <TextBlock Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="273,39,-377,-84" Grid.RowSpan="2" Text="TextBlock" TextWrapping="Wrap" VerticalAlignment="Top" Height="45" Width="104" FontSize="24" TextAlignment="Center" LineHeight="24"/>
+        <ListView Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="5,0,-749,-895" VerticalAlignment="Top" Width="744" Grid.Row="1" Height="895" RenderTransformOrigin="0.504,0.417"/>
+        <ListView HorizontalAlignment="Left" Height="8" Margin="342,48,0,0" VerticalAlignment="Top" Width="2"/>
+        <Button Content="Button" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="900,50,-975,-80" Grid.RowSpan="2" VerticalAlignment="Top" Height="30" Width="75"/>
+        <Button Content="Button" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="1043,23,-1147,-90" Grid.RowSpan="2" VerticalAlignment="Top" Height="67" Width="95"/>
+        <Button Content="Button" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="1156,23,-1251,-88" Grid.RowSpan="2" VerticalAlignment="Top" Height="67" Width="95"/>
+        <Button Content="Button" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="1374,23,-1469,-92" Grid.RowSpan="2" VerticalAlignment="Top" Height="67" Width="95"/>
+        <Button Content="Button" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="1267,23,-1362,-90" Grid.RowSpan="2" VerticalAlignment="Top" Height="67" Width="95"/>
+        <ComboBox Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="628,47,-868,-79" Grid.RowSpan="2" VerticalAlignment="Top" Width="240"/>
+        <Grid Grid.Column="1" HorizontalAlignment="Left" Height="99" Margin="0,794,0,0" Grid.Row="1" VerticalAlignment="Top" Width="750">
+            <StackPanel Orientation="Horizontal">
+
+                <Button Content="Button" Height="67" Width="104"/>
+                <Button Content="Button" Height="67" Width="104"/>
+            </StackPanel>
+        </Grid>
+        <StackPanel Grid.ColumnSpan="2" HorizontalAlignment="Left" Height="100" Margin="951,221,-1051,-321" Grid.RowSpan="2" VerticalAlignment="Top" Width="100"/>
 
     </Grid>
 </Page>
