--- a/MobilReklame/MobilReklame/Views/MainPage.xaml
+++ b/MobilReklame/MobilReklame/Views/MainPage.xaml
@@ -10,38 +10,63 @@
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition/>
-            <ColumnDefinition/>
+            <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
+
         <Grid.RowDefinitions>
-            <RowDefinition/>
-            <RowDefinition Height="895"/>
+            <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        <StackPanel Orientation="Horizontal">
-            <Button Content="Button" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="20,20,0,0" Grid.RowSpan="2" VerticalAlignment="Top" Height="70" Width="110"/>
-            <Button Content="Button" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="20,20,0,0" Grid.RowSpan="2" VerticalAlignment="Top" Height="70" Width="110"/>
-            <TextBox Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="50,40,0,0" Grid.RowSpan="2" Text="TextBox" VerticalAlignment="Top" Width="181" >
-            </TextBox>
-            <TextBlock Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="-20,45,0,0" Grid.RowSpan="2" Text="Søg" TextWrapping="Wrap" VerticalAlignment="Top" Height="45" Width="104" FontSize="18" TextAlignment="Center" LineHeight="24"/>
-        </StackPanel>
 
-        <Line Stroke="Black" StrokeThickness="10" X1="0" Y1="500" X2="1000" Y2="500"/>
 
-        <ListView Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="5,0,-749,-895" VerticalAlignment="Top" Width="744" Grid.Row="1" Height="895" RenderTransformOrigin="0.504,0.417"/>
-        <Button Content="Button" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="900,50,-975,-80" Grid.RowSpan="2" VerticalAlignment="Top" Height="30" Width="75"/>
-        <Button Content="Button" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="1043,23,-1147,-90" Grid.RowSpan="2" VerticalAlignment="Top" Height="70" Width="95"/>
-        <Button Content="Button" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="1156,23,-1251,-88" Grid.RowSpan="2" VerticalAlignment="Top" Height="70" Width="95"/>
-        <Button Content="Button" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="1374,23,-1469,-92" Grid.RowSpan="2" VerticalAlignment="Top" Height="70" Width="95"/>
-        <Button Content="Button" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="1267,23,-1362,-90" Grid.RowSpan="2" VerticalAlignment="Top" Height="70" Width="95"/>
-        <ComboBox Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="628,47,-868,-79" Grid.RowSpan="2" VerticalAlignment="Top" Width="240"/>
-        
-        <Grid Grid.Column="1" HorizontalAlignment="Left" Height="99" Margin="0,794,0,0" Grid.Row="1" VerticalAlignment="Top" Width="750">
-            <StackPanel Orientation="Horizontal">
-                <Button FontSize="24" Content="Edit" Height="67" Width="150" Margin="200,0,50,0"/>
-                <Button FontSize="24" Content="Delete" Height="67" Width="150" Margin="0,0,0,0"/>
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+
+            <Grid.RowDefinitions>
+                <RowDefinition Height="105"/>
+            </Grid.RowDefinitions>
+
+            <StackPanel Orientation="Horizontal" Background="LightGray">
+                <Button x:Name="NewCase" Content="Button" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="20,20,0,0" Grid.RowSpan="2" VerticalAlignment="Top" Height="70" Width="110"/>
+                <Button x:Name="CustomerLibrary" Content="Button" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="20,20,0,0" Grid.RowSpan="2" VerticalAlignment="Top" Height="70" Width="110"/>
+                <TextBox Grid.ColumnSpan="2" Margin="50,40,0,0" Grid.RowSpan="2" Text="Søg" VerticalAlignment="Top" Width="181" Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"/>
+                <Button x:Name="Search" Content="Button" Grid.ColumnSpan="2" Margin="10,41,0,0" Grid.RowSpan="2" VerticalAlignment="Top" Height="30" Width="75"/>
+                <ComboBox Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="50,40,0,0" Grid.RowSpan="2" VerticalAlignment="Top" Width="240" Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"/>
+                <Button x:Name="Clear" Content="Button" Grid.ColumnSpan="2" Margin="10,41,0,0" Grid.RowSpan="2" VerticalAlignment="Top" Height="30" Width="75"/>
+                <Button x:Name="Tab1" Content="Button" Grid.ColumnSpan="2" Margin="90,20,0,0" Grid.RowSpan="2" VerticalAlignment="Top" Height="70" Width="95"/>
+                <Button x:Name="Tab2" Content="Button" Grid.ColumnSpan="2" Margin="20,20,0,0" Grid.RowSpan="2" VerticalAlignment="Top" Height="70" Width="95"/>
+                <Button x:Name="Tab3" Content="Button" Grid.ColumnSpan="2" Margin="20,20,0,0" Grid.RowSpan="2" VerticalAlignment="Top" Height="70" Width="95"/>
+                <Button x:Name="Tab4" Content="Button" Grid.ColumnSpan="2" Margin="20,20,0,0" Grid.RowSpan="2" VerticalAlignment="Top" Height="70" Width="95"/>
             </StackPanel>
+
+            <Line X1="0" Y1="105" X2="1500" Y2="105" Stroke="Black" StrokeThickness="2" />
+            
         </Grid>
 
+        <Line X1="750" Y1="105" X2="750" Y2="1000" Stroke="Black" StrokeThickness="1" />
 
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+
+            <Grid.RowDefinitions>
+                <RowDefinition/>
+                <RowDefinition Height="895"/>
+            </Grid.RowDefinitions>
+
+            <ListView x:Name="CaseList" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="0,0,0,0" VerticalAlignment="Top" Width="750" Grid.Row="1" Height="895"/>
+            
+
+            <Grid Grid.Column="1" HorizontalAlignment="Left" Height="100" Margin="0,794,0,0" Grid.Row="1" VerticalAlignment="Top" Width="750">
+                <StackPanel Orientation="Horizontal">
+                    <Button x:Name="Edit" FontSize="24" Content="Edit" Height="67" Width="150" Margin="210,0,50,0"/>
+                    <Button x:Name="Delete" FontSize="24" Content="Delete" Height="67" Width="150" Margin="0,0,0,0"/>
+                </StackPanel>
+            </Grid>
+
+        </Grid>
     </Grid>
 </Page>
