--- a/MobilReklame/MobilReklame/Views/MainPage.xaml
+++ b/MobilReklame/MobilReklame/Views/MainPage.xaml
@@ -28,7 +28,7 @@
             </Grid.RowDefinitions>
 
             <StackPanel Orientation="Horizontal" Background="LightGray">
-                <Button x:Name="NewCase" Content="Button" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="20,20,0,0" Grid.RowSpan="2" VerticalAlignment="Top" Height="70" Width="110"/>
+                <Button x:Name="NewCase" Content="hallo" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="20,20,0,0" Grid.RowSpan="2" VerticalAlignment="Top" Height="70" Width="110"/>
                 <Button x:Name="CustomerLibrary" Content="Button" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="20,20,0,0" Grid.RowSpan="2" VerticalAlignment="Top" Height="70" Width="110"/>
                 <TextBox Grid.ColumnSpan="2" Margin="50,40,0,0" Grid.RowSpan="2" Text="Søg" VerticalAlignment="Top" Width="181" Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"/>
                 <Button x:Name="Search" Content="Button" Grid.ColumnSpan="2" Margin="10,41,0,0" Grid.RowSpan="2" VerticalAlignment="Top" Height="30" Width="75"/>
