--- a/MobilReklame/MobilReklame/Views/MainPage.xaml
+++ b/MobilReklame/MobilReklame/Views/MainPage.xaml
@@ -14,59 +14,30 @@
         </Grid.ColumnDefinitions>
 
         <Grid.RowDefinitions>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="104*"/>
+            <RowDefinition Height="793*"/>
+            <RowDefinition Height="104*"/>
         </Grid.RowDefinitions>
+         
+        <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch">
+            <Button x:Name="NewCase" Content="hallo" Grid.ColumnSpan="2" HorizontalAlignment="Stretch" Margin="20,20,0,0" Grid.RowSpan="2" VerticalAlignment="Stretch" Height="auto" MinWidth="65" Width="auto"  MaxWidth="95"/>
+            <Button x:Name="CustomerLibrary" Content="Button" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="20,20,0,0" Grid.RowSpan="2" VerticalAlignment="Stretch" MinWidth="65" Width="auto"  MaxWidth="95"/>
+            <TextBox Grid.ColumnSpan="2" Margin="50,30,0,0" Grid.RowSpan="2" Text="Søg" VerticalAlignment="Top" Width="181" Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"/>
+            <Button x:Name="Search" Content="Button" Grid.ColumnSpan="2" Margin="10,20,0,0" Grid.RowSpan="2" Height="30"  VerticalAlignment="Stretch" MinWidth="50" Width="auto"  MaxWidth="75"/>
+            <ComboBox Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="50,20,0,0" Grid.RowSpan="2" VerticalAlignment="Top" Width="240" Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"/>
+            <Button x:Name="Clear" Content="Button" Grid.ColumnSpan="2" Margin="10,20,0,0" Grid.RowSpan="2" Height="30" VerticalAlignment="Stretch" MinWidth="65" Width="auto"  MaxWidth="95"/>
+            <Button x:Name="Tab1" Content="Button" Grid.ColumnSpan="2" Margin="90,20,0,0" Grid.RowSpan="2" VerticalAlignment="Stretch" MinWidth="65" Width="auto"  MaxWidth="95"/>
+            <Button x:Name="Tab2" Content="Button" Grid.ColumnSpan="2" Margin="20,20,0,0" Grid.RowSpan="2" VerticalAlignment="Stretch" MinWidth="65" Width="auto"  MaxWidth="95"/>
+            <Button x:Name="Tab3" Content="Button" Grid.ColumnSpan="2" Margin="20,20,0,0" Grid.RowSpan="2" VerticalAlignment="Stretch" MinWidth="65" Width="auto"  MaxWidth="95"/>
+            <Button x:Name="Tab4" Content="Button" Grid.ColumnSpan="2" Margin="20,20,0,0" Grid.RowSpan="2" VerticalAlignment="Stretch" MinWidth="65" Width="auto"  MaxWidth="95"/>
+        </StackPanel>
 
+        <ListView x:Name="CaseList" HorizontalAlignment="Left" Margin="0,0,0,0" VerticalAlignment="Bottom" Width="750" Grid.Column="0" Grid.Row="1" Height="890" Grid.RowSpan="2"/>
 
-        <Grid>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"/>
-            </Grid.ColumnDefinitions>
+        <StackPanel Orientation="Horizontal" Grid.Column="0" Grid.Row="2">
+            <Button x:Name="Edit" FontSize="24" Content="Edit" Height="67" Width="150" Margin="210,0,50,0"/>
+            <Button x:Name="Delete" FontSize="24" Content="Delete" Height="67" Width="150" Margin="0,0,0,0"/>
+        </StackPanel>
 
-            <Grid.RowDefinitions>
-                <RowDefinition Height="105"/>
-            </Grid.RowDefinitions>
-
-            <StackPanel Orientation="Horizontal" Background="LightGray">
-                <Button x:Name="NewCase" Content="hallo" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="20,20,0,0" Grid.RowSpan="2" VerticalAlignment="Top" Height="70" Width="110"/>
-                <Button x:Name="CustomerLibrary" Content="Button" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="20,20,0,0" Grid.RowSpan="2" VerticalAlignment="Top" Height="70" Width="110"/>
-                <TextBox Grid.ColumnSpan="2" Margin="50,40,0,0" Grid.RowSpan="2" Text="Søg" VerticalAlignment="Top" Width="181" Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"/>
-                <Button x:Name="Search" Content="Button" Grid.ColumnSpan="2" Margin="10,41,0,0" Grid.RowSpan="2" VerticalAlignment="Top" Height="30" Width="75"/>
-                <ComboBox Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="50,40,0,0" Grid.RowSpan="2" VerticalAlignment="Top" Width="240" Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"/>
-                <Button x:Name="Clear" Content="Button" Grid.ColumnSpan="2" Margin="10,41,0,0" Grid.RowSpan="2" VerticalAlignment="Top" Height="30" Width="75"/>
-                <Button x:Name="Tab1" Content="Button" Grid.ColumnSpan="2" Margin="90,20,0,0" Grid.RowSpan="2" VerticalAlignment="Top" Height="70" Width="95"/>
-                <Button x:Name="Tab2" Content="Button" Grid.ColumnSpan="2" Margin="20,20,0,0" Grid.RowSpan="2" VerticalAlignment="Top" Height="70" Width="95"/>
-                <Button x:Name="Tab3" Content="Button" Grid.ColumnSpan="2" Margin="20,20,0,0" Grid.RowSpan="2" VerticalAlignment="Top" Height="70" Width="95"/>
-                <Button x:Name="Tab4" Content="Button" Grid.ColumnSpan="2" Margin="20,20,0,0" Grid.RowSpan="2" VerticalAlignment="Top" Height="70" Width="95"/>
-            </StackPanel>
-
-            <Line X1="0" Y1="105" X2="1500" Y2="105" Stroke="Black" StrokeThickness="2" />
-            
-        </Grid>
-
-        <Line X1="750" Y1="105" X2="750" Y2="1000" Stroke="Black" StrokeThickness="1" />
-
-        <Grid>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition/>
-                <ColumnDefinition/>
-            </Grid.ColumnDefinitions>
-
-            <Grid.RowDefinitions>
-                <RowDefinition/>
-                <RowDefinition Height="895"/>
-            </Grid.RowDefinitions>
-
-            <ListView x:Name="CaseList" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="0,0,0,0" VerticalAlignment="Top" Width="750" Grid.Row="1" Height="895"/>
-            
-
-            <Grid Grid.Column="1" HorizontalAlignment="Left" Height="100" Margin="0,794,0,0" Grid.Row="1" VerticalAlignment="Top" Width="750">
-                <StackPanel Orientation="Horizontal">
-                    <Button x:Name="Edit" FontSize="24" Content="Edit" Height="67" Width="150" Margin="210,0,50,0"/>
-                    <Button x:Name="Delete" FontSize="24" Content="Delete" Height="67" Width="150" Margin="0,0,0,0"/>
-                </StackPanel>
-            </Grid>
-
-        </Grid>
     </Grid>
 </Page>
