--- a/MobilReklame/MobilReklame/Views/MainPage.xaml
+++ b/MobilReklame/MobilReklame/Views/MainPage.xaml
@@ -22,9 +22,9 @@
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch">
             <Button x:Name="NewCase" Content="hallo" Grid.ColumnSpan="2" HorizontalAlignment="Stretch" Margin="20,20,0,0" Grid.RowSpan="2" VerticalAlignment="Stretch" Height="auto" Width="auto" MinWidth="85"/>
             <Button x:Name="CustomerLibrary" Content="Button" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="20,20,0,0" Grid.RowSpan="2" VerticalAlignment="Stretch" MinWidth="85" Width="auto"/>
-            <TextBox Grid.ColumnSpan="2" Margin="50,31,0,0" Grid.RowSpan="2" Text="Søg" VerticalAlignment="Top" Width="181" Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"/>
+            <TextBox Grid.ColumnSpan="2" Margin="50,20,0,0" Grid.RowSpan="2" Text="Søg" VerticalAlignment="Center" Width="181" Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"/>
             <Button x:Name="Search" Content="Button" Grid.ColumnSpan="2" Margin="10,20,0,0" Grid.RowSpan="2" Height="30"  VerticalAlignment="Stretch" MinWidth="50" Width="auto"  MaxWidth="75"/>
-            <ComboBox Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="50,31,0,0" Grid.RowSpan="2" VerticalAlignment="Top" Width="240" Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"/>
+            <ComboBox Grid.ColumnSpan="2" HorizontalAlignment="Center" Margin="50,20,0,0" Grid.RowSpan="2" VerticalAlignment="center" Width="240" Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"/>
             <Button x:Name="Clear" Content="Button" Grid.ColumnSpan="2" Margin="10,20,0,0" Grid.RowSpan="2" Height="30" VerticalAlignment="Stretch" MinWidth="85" Width="auto" />
             <Button x:Name="Tab1" Content="Button" Grid.ColumnSpan="2" Margin="50,20,0,0" Grid.RowSpan="2" VerticalAlignment="Stretch" MinWidth="85" Width="auto"/>
             <Button x:Name="Tab2" Content="Button" Grid.ColumnSpan="2" Margin="20,20,0,0" Grid.RowSpan="2" VerticalAlignment="Stretch" MinWidth="85" Width="auto"/>
