--- a/MobilReklame/MobilReklame/Views/MainPage.xaml
+++ b/MobilReklame/MobilReklame/Views/MainPage.xaml
@@ -8,6 +8,9 @@
     xmlns:interop="using:Windows.UI.Xaml.Interop"
     mc:Ignorable="d">
 
+
+
+
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
@@ -18,25 +21,47 @@
             <RowDefinition Height="793*"/>
             <RowDefinition Height="104*"/>
         </Grid.RowDefinitions>
-         
-        <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch">
-            <Button x:Name="NewCase" Content="hallo" Grid.ColumnSpan="2" HorizontalAlignment="Stretch" Margin="20,20,0,0" Grid.RowSpan="2" VerticalAlignment="Stretch" Height="auto" Width="auto" MinWidth="85"/>
-            <Button x:Name="CustomerLibrary" Content="Button" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="20,20,0,0" Grid.RowSpan="2" VerticalAlignment="Stretch" MinWidth="85" Width="auto"/>
-            <TextBox Grid.ColumnSpan="2" Margin="50,20,0,0" Grid.RowSpan="2" Text="Søg" VerticalAlignment="Center" Width="181" Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"/>
-            <Button x:Name="Search" Content="Button" Grid.ColumnSpan="2" Margin="10,20,0,0" Grid.RowSpan="2" Height="30"  VerticalAlignment="Stretch" MinWidth="50" Width="auto"  MaxWidth="75"/>
-            <ComboBox Grid.ColumnSpan="2" HorizontalAlignment="Center" Margin="50,20,0,0" Grid.RowSpan="2" VerticalAlignment="center" Width="240" Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"/>
-            <Button x:Name="Clear" Content="Button" Grid.ColumnSpan="2" Margin="10,20,0,0" Grid.RowSpan="2" Height="30" VerticalAlignment="Stretch" MinWidth="85" Width="auto" />
-            <Button x:Name="Tab1" Content="Button" Grid.ColumnSpan="2" Margin="50,20,0,0" Grid.RowSpan="2" VerticalAlignment="Stretch" MinWidth="85" Width="auto"/>
-            <Button x:Name="Tab2" Content="Button" Grid.ColumnSpan="2" Margin="20,20,0,0" Grid.RowSpan="2" VerticalAlignment="Stretch" MinWidth="85" Width="auto"/>
-            <Button x:Name="Tab3" Content="Button" Grid.ColumnSpan="2" Margin="20,20,0,0" Grid.RowSpan="2" VerticalAlignment="Stretch" MinWidth="85" Width="auto"/>
-            <Button x:Name="Tab4" Content="Button" Grid.ColumnSpan="2" Margin="20,20,0,0" Grid.RowSpan="2" VerticalAlignment="Stretch" MinWidth="85" Width="auto"/>
+
+        <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Background="LightGray">
+            <StackPanel.Resources>
+                <Style TargetType="Button" x:Name="TabStyle">
+                    <Setter Property="Height" Value="auto"/>
+                    <Setter Property="Width" Value="auto"/>
+                    <Setter Property="VerticalAlignment" Value="Stretch"/>
+                    <Setter Property="MinWidth" Value="85"/>
+                    <Setter Property="HorizontalAlignment" Value="Right"/>
+                    <Setter Property="Margin" Value="10,20,0,0"/>
+                </Style>
+            </StackPanel.Resources>
+
+            <Button x:Name="NewCase" Content="hallo" Style="{StaticResource TabStyle}" Margin="20,20,0,10"/>
+            <Button x:Name="CustomerLibrary" Content="Button" Style="{StaticResource TabStyle}" Margin="20,20,0,10"/>
+            <TextBox Margin="50,10,0,0" Text="Søg" VerticalAlignment="Center" Width="181" Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"/>
+            <Button x:Name="Search" Content="Button" Margin="10,10,0,0" Height="30"  VerticalAlignment="Stretch" MinWidth="50" Width="auto"  MaxWidth="75" HorizontalAlignment="Center"/>
+            <ComboBox HorizontalAlignment="Center" Margin="50,10,0,0" VerticalAlignment="center" Width="240" Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"/>
+            <Button x:Name="Clear" Content="Button" Margin="10,10,0,0" Height="30" VerticalAlignment="Stretch" MinWidth="85" Width="auto" HorizontalAlignment="Center"/>
+            <Button x:Name="Tab1" Content="Button" Style="{StaticResource TabStyle}" Margin="60,20,0,0"/>
+            <Button x:Name="Tab2" Content="Button" Style="{StaticResource TabStyle}"/>
+            <Button x:Name="Tab3" Content="Button" Style="{StaticResource TabStyle}"/>
+            <Button x:Name="Tab4" Content="Button" Style="{StaticResource TabStyle}"/>
         </StackPanel>
 
-        <ListView x:Name="CaseList" HorizontalAlignment="Left" Margin="0,0,0,0" VerticalAlignment="Bottom" Width="750" Grid.Column="0" Grid.Row="1" Height="890" Grid.RowSpan="2"/>
+        <ListView x:Name="CaseList" HorizontalAlignment="Left" Margin="0,0,0,0" VerticalAlignment="Bottom" Width="750" Grid.Column="0" Grid.Row="1" Height="895" Grid.RowSpan="2"/>
 
-        <StackPanel Orientation="Horizontal" Grid.Column="0" Grid.Row="2">
-            <Button x:Name="Edit" FontSize="24" Content="Edit" Height="67" Width="150" Margin="210,0,50,0"/>
-            <Button x:Name="Delete" FontSize="24" Content="Delete" Height="67" Width="150" Margin="0,0,0,0"/>
+        <StackPanel Orientation="Horizontal" Grid.Column="0" Grid.Row="2" FlowDirection="RightToLeft" Background="LightGray">
+            <StackPanel.Resources>
+                <Style TargetType="Button" x:Name="EditDel">
+                    <Setter Property="Height" Value="auto"/>
+                    <Setter Property="Width" Value="150"/>
+                    <Setter Property="VerticalAlignment" Value="Stretch"/>
+                    <Setter Property="MinWidth" Value="85"/>
+                    <Setter Property="HorizontalAlignment" Value="center"/>
+                </Style>
+            </StackPanel.Resources>
+
+            <Button x:Name="Delete" Content="Delete" Style="{StaticResource EditDel}" Margin="180,20,0,20"/>
+            <Button x:Name="Edit" Content="Edit" Style="{StaticResource EditDel}" Margin="40,20,0,20"/>
+
         </StackPanel>
 
     </Grid>
