--- a/MobilReklame/MobilReklame/Views/MainPage.xaml
+++ b/MobilReklame/MobilReklame/Views/MainPage.xaml
@@ -13,7 +13,8 @@
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="1*"/>
+            <ColumnDefinition Width="1*"/>
         </Grid.ColumnDefinitions>
 
         <Grid.RowDefinitions>
@@ -22,7 +23,7 @@
             <RowDefinition Height="104*"/>
         </Grid.RowDefinitions>
 
-        <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Background="LightGray">
+        <StackPanel Grid.ColumnSpan="2" Orientation="Horizontal" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Background="LightGray">
             <StackPanel.Resources>
                 <Style TargetType="Button" x:Name="TabStyle">
                     <Setter Property="Height" Value="auto"/>
@@ -46,9 +47,9 @@
             <Button x:Name="Tab4" Content="Button" Style="{StaticResource TabStyle}"/>
         </StackPanel>
 
-        <ListView x:Name="CaseList" HorizontalAlignment="Left" Margin="0,0,0,0" VerticalAlignment="Bottom" Width="750" Grid.Column="0" Grid.Row="1" Height="895" Grid.RowSpan="2"/>
+        <ListView x:Name="CaseList" Grid.RowSpan="2" HorizontalAlignment="Stretch" Margin="0,0,0,0" VerticalAlignment="Stretch" Grid.Row="1"/>
 
-        <StackPanel Orientation="Horizontal" Grid.Column="0" Grid.Row="2" FlowDirection="RightToLeft" Background="LightGray">
+        <StackPanel Orientation="Horizontal" Grid.Column="1" Grid.Row="2" FlowDirection="RightToLeft" Background="LightGray">
             <StackPanel.Resources>
                 <Style TargetType="Button" x:Name="EditDel">
                     <Setter Property="Height" Value="auto"/>
@@ -64,5 +65,6 @@
 
         </StackPanel>
 
+        
     </Grid>
 </Page>
