--- a/MobilReklame/MobilReklame/Views/MainPage.xaml
+++ b/MobilReklame/MobilReklame/Views/MainPage.xaml
@@ -46,15 +46,15 @@
                     </Style>
                 </StackPanel.Resources>
 
-                <Button x:Name="NewCase" Content="hallo" Style="{StaticResource TabStyle}" Margin="20,20,0,10"/>
-                <Button x:Name="CustomerLibrary" Content="Button" Style="{StaticResource TabStyle}" Margin="20,20,0,10"/>
-                <TextBox Margin="20,10,0,0" Text="Søg" VerticalAlignment="Center" Width="181" Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"/>
+                <Button x:Name="NewCase" Content="New Case" Style="{StaticResource TabStyle}" Margin="20,20,0,10"/>
+                <Button x:Name="CustomerLibrary" Content="Customer" Style="{StaticResource TabStyle}" Margin="20,20,0,10"/>
+                <TextBox x:Name="SearchHere" Margin="20,10,0,0" Text="Søg" VerticalAlignment="Center" Width="181" Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"/>
                 <Button x:Name="Search" Content="S" Margin="0,10,0,0" Height="32"  VerticalAlignment="Stretch" Width="32" HorizontalAlignment="Center"/>
 
             </StackPanel>
 
             <StackPanel Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Background="LightGray">
-                <ComboBox HorizontalAlignment="Center" Margin="100,10,0,0" VerticalAlignment="center" Width="240" Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"/>
+                <ComboBox x:Name="SearchCatagory" HorizontalAlignment="Center" Margin="100,10,0,0" VerticalAlignment="center" Width="240" Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"/>
                 <Button x:Name="Clear" Content="Clear" Margin="10,10,0,0" Height="32" VerticalAlignment="Stretch" MinWidth="85" Width="auto" HorizontalAlignment="Center"/>
             </StackPanel>
 
@@ -78,6 +78,7 @@
         </Grid>
             
         <ListView x:Name="CaseList" Grid.RowSpan="2" HorizontalAlignment="Stretch" Margin="0,0,0,0" VerticalAlignment="Stretch" Grid.Row="1"/>
+        
 
         <StackPanel Orientation="Horizontal" Grid.Column="1" Grid.Row="2" FlowDirection="RightToLeft" Background="LightGray">
             <StackPanel.Resources>
