--- a/MobilReklame/MobilReklame/Views/MainPage.xaml
+++ b/MobilReklame/MobilReklame/Views/MainPage.xaml
@@ -9,7 +9,7 @@
     mc:Ignorable="d">
 
 
-
+    
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <Grid.ColumnDefinitions>
@@ -46,7 +46,7 @@
                     </Style>
                 </StackPanel.Resources>
 
-                <Button x:Name="NewCase" Content="New Case" Style="{StaticResource TabStyle}" Margin="20,20,0,10"/>
+                <Button x:Name="NewCase" Content="New Case" Style="{StaticResource TabStyle}" Margin="20,20,0,10" Click="NewPage"/>
                 <Button x:Name="CustomerLibrary" Content="Customer" Style="{StaticResource TabStyle}" Margin="20,20,0,10"/>
                 <TextBox x:Name="SearchHere" Margin="20,10,0,0" Text="Søg" VerticalAlignment="Center" Width="181" Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"/>
                 <Button x:Name="Search" Content="S" Margin="0,10,0,0" Height="32"  VerticalAlignment="Stretch" Width="32" HorizontalAlignment="Center"/>
@@ -78,7 +78,7 @@
         </Grid>
             
         <ListView x:Name="CaseList" Grid.RowSpan="2" HorizontalAlignment="Stretch" Margin="0,0,0,0" VerticalAlignment="Stretch" Grid.Row="1"/>
-        
+
 
         <StackPanel Orientation="Horizontal" Grid.Column="1" Grid.Row="2" FlowDirection="RightToLeft" Background="LightGray">
             <StackPanel.Resources>
@@ -91,7 +91,7 @@
                 </Style>
             </StackPanel.Resources>
 
-            <Button x:Name="Delete" Content="Delete" Style="{StaticResource EditDel}" Margin="180,20,0,20"/>
+            <Button x:Name="Delete" Content="Delete" Style="{StaticResource EditDel}" Margin="180,20,0,20" />
             <Button x:Name="Edit" Content="Edit" Style="{StaticResource EditDel}" Margin="40,20,0,20"/>
 
         </StackPanel>
