--- a/MobilReklame/MobilReklame/Views/CustomerList.xaml
+++ b/MobilReklame/MobilReklame/Views/CustomerList.xaml
@@ -1,15 +1,13 @@
 ﻿<Page
-    x:Class="MobilReklame.MainPage1"
+    x:Class="MobilReklame.Views.CustomerList"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:MobilReklame"
+    xmlns:local="using:MobilReklame.Views"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-
-
 
     </Grid>
 </Page>
