--- a/MobilReklame/MobilReklame/Views/CaseCreation.xaml
+++ b/MobilReklame/MobilReklame/Views/CaseCreation.xaml
@@ -1,12 +1,12 @@
 ﻿<Page
-    x:Class="MobilReklame.Views.BlankPage1"
+    x:Class="MobilReklame.Views.CaseCreation"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:MobilReklame.Views"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
-
+    
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="1*"/>
@@ -19,10 +19,9 @@
             <RowDefinition Height="104*"/>
         </Grid.RowDefinitions>
 
-        
-        <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Text="Kunde information" FontSize="48"/>
-        
-            
+        <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Text="Kunde information" FontSize="32"/>
+        <TextBlock Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center" Text="Sags Information" FontSize="32"/>
+
         <Grid Grid.ColumnSpan="2" Grid.Row="1">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="70*"/>
@@ -41,7 +40,7 @@
                     <Setter Property="Height" Value="40"/>
                     <Setter Property="VerticalAlignment" Value="Top"/>
                     <Setter Property="HorizontalAlignment" Value="Right"/>
-                    <Setter Property="Margin" Value="0,24,0,0"/>
+                    <Setter Property="Margin" Value="0,24,20,0"/>
                 </Style>
 
                 <Style TargetType="TextBox" x:Name="textboxes">
@@ -49,11 +48,11 @@
                     <Setter Property="Width" Value="auto"/>
                     <Setter Property="VerticalAlignment" Value="top"/>
                     <Setter Property="HorizontalAlignment" Value="Stretch"/>
-                    <Setter Property="Margin" Value="10,20,0,0"/>
+                    <Setter Property="Margin" Value="10,20,40,0"/>
                 </Style>
             </Grid.Resources>
 
-            
+
 
             <StackPanel Grid.Column="0" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
                 <TextBlock Style="{StaticResource textblocks}" Text="CVR."/>
@@ -67,6 +66,7 @@
             </StackPanel>
 
             <StackPanel Grid.Column="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+
                 <TextBox Style="{StaticResource textboxes}" PlaceholderText="CVR." />
                 <TextBox Style="{StaticResource textboxes}" PlaceholderText="Navn"/>
                 <TextBox Style="{StaticResource textboxes}" PlaceholderText="Nummer"/>
@@ -74,15 +74,42 @@
                 <TextBox Style="{StaticResource textboxes}" PlaceholderText="Navn"/>
                 <TextBox Style="{StaticResource textboxes}" PlaceholderText="Nummer"/>
                 <TextBox Style="{StaticResource textboxes}" PlaceholderText="E-mail"/>
-                <TextBox Style="{StaticResource textboxes}" AcceptsReturn="True" TextWrapping="Wrap" PlaceholderText="Noter" VerticalAlignment="Stretch"/>
+                <TextBox Style="{StaticResource textboxes}" AcceptsReturn="True" TextWrapping="Wrap" PlaceholderText="Noter" Height="100" VerticalAlignment="Stretch"/>
             </StackPanel>
+
+            <StackPanel Grid.Column="2" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+                <TextBlock Style="{StaticResource textblocks}" Text="CVR."/>
+                <TextBlock Style="{StaticResource textblocks}" Text="Firma navn"/>
+                <TextBlock Style="{StaticResource textblocks}" Text="Tlf nr."/>
+                <TextBlock Style="{StaticResource textblocks}" Text="E-mail"/>
+                <TextBlock Style="{StaticResource textblocks}" Text="Kontakt person"/>
+                <TextBlock Style="{StaticResource textblocks}" Text="Kontakt tlf nr."/>
+            </StackPanel>
+
+            <StackPanel Grid.Column="3" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+                <TextBox Style="{StaticResource textboxes}"/>
+                <DatePicker x:Name="start" DayFormat="day" MonthFormat="month.numeric" YearFormat="year.abbreviated" HorizontalAlignment="Left" Margin="10,25,10,5"/>
+                <DatePicker x:Name="End" DayFormat="day" MonthFormat="month.numeric" YearFormat="year.abbreviated" HorizontalAlignment="Left" Margin="10,25,10,5"/>
+                <TextBox Style="{StaticResource textboxes}"/>
+                <TextBox Style="{StaticResource textboxes}"/>
+                <TextBox Style="{StaticResource textboxes}"/>
+            </StackPanel>
+
         </Grid>
 
-        <StackPanel Grid.Column="0" Grid.Row="2" Grid.ColumnSpan="1" Orientation="Horizontal">
-            <Button x:Name="Back" Width="120" Height="70" Content="Tilbage" Click="Back_Click" Margin="20,0,0,0"/>
-            <Button x:Name="Save" Width="120" Height="70" Content="Save" Margin="20,0,0,0"/>
+        <StackPanel Grid.Row="2" Grid.Column="1" Orientation="Horizontal" FlowDirection="RightToLeft">
+            <StackPanel.Resources>
+                <Style TargetType="Button" x:Name="button">
+                    <Setter Property="HorizontalAlignment" Value="Stretch"/>
+                    <Setter Property="VerticalAlignment" Value="Stretch"/>
+                    <Setter Property="Height" Value="auto"/>
+                    <Setter Property="Width" Value="150"/>
+                    <Setter Property="Margin" Value="10,20,10,20"/>
+                </Style>
+            </StackPanel.Resources>
+            <Button Style="{StaticResource button}" Margin="50,20,10,20" Content="Annuller"/>
+            <Button Style="{StaticResource button}" Content="Gem"/>
         </StackPanel>
-        
-
     </Grid>
+
 </Page>
