--- a/MobilReklame/MobilReklame/Views/Customer List.xaml
+++ b/MobilReklame/MobilReklame/Views/Customer List.xaml
@@ -1,8 +1,8 @@
 ﻿<Page
-    x:Class="MobilReklame.MainPage1"
+    x:Class="MobilReklame.Views.Customer_List"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:MobilReklame"
+    xmlns:local="using:MobilReklame.Views"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
@@ -20,22 +20,22 @@
         </Grid.RowDefinitions>
 
 
-            <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Background="LightGray">
-                <StackPanel.Resources>
-                    <Style TargetType="Button" x:Name="TabStyle">
-                        <Setter Property="Height" Value="auto"/>
-                        <Setter Property="Width" Value="auto"/>
-                        <Setter Property="VerticalAlignment" Value="Stretch"/>
-                        <Setter Property="MinWidth" Value="85"/>
-                        <Setter Property="HorizontalAlignment" Value="Right"/>
-                        <Setter Property="Margin" Value="10,20,0,0"/>
-                    </Style>
-                </StackPanel.Resources>
-                <Button x:Name="NewCase" Content="Ny sag" Style="{StaticResource TabStyle}" Margin="20,20,0,10"/>
-                <Button x:Name="CaseLibrary" Content="Sager" Style="{StaticResource TabStyle}" Margin="20,20,0,10"/>
-                <TextBox x:Name="SearchHere" Margin="20,10,0,0" Text="Søg" VerticalAlignment="Center" Width="181" Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"/>
-                <Button x:Name="Search" Content="S" Margin="0,10,0,0" Height="32"  VerticalAlignment="Stretch" Width="32" HorizontalAlignment="Center"/>
-            </StackPanel>
+        <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Background="LightGray">
+            <StackPanel.Resources>
+                <Style TargetType="Button" x:Name="TabStyle">
+                    <Setter Property="Height" Value="auto"/>
+                    <Setter Property="Width" Value="auto"/>
+                    <Setter Property="VerticalAlignment" Value="Stretch"/>
+                    <Setter Property="MinWidth" Value="85"/>
+                    <Setter Property="HorizontalAlignment" Value="Right"/>
+                    <Setter Property="Margin" Value="10,20,0,0"/>
+                </Style>
+            </StackPanel.Resources>
+            <Button x:Name="NewCase" Content="Ny sag" Style="{StaticResource TabStyle}" Margin="20,20,0,10"/>
+            <Button x:Name="CaseLibrary" Content="Sager" Style="{StaticResource TabStyle}" Margin="20,20,0,10"/>
+            <TextBox x:Name="SearchHere" Margin="20,10,0,0" Text="Søg" VerticalAlignment="Center" Width="181" Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"/>
+            <Button x:Name="Search" Content="S" Margin="0,10,0,0" Height="32"  VerticalAlignment="Stretch" Width="32" HorizontalAlignment="Center"/>
+        </StackPanel>
 
         <StackPanel Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Background="LightGray">
             <ComboBox x:Name="SearchCatagory" HorizontalAlignment="Center" Margin="100,10,0,0" VerticalAlignment="center" Width="240" Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"/>
@@ -60,7 +60,6 @@
             <Button x:Name="Edit" Content="Edit" Style="{StaticResource EditDel}" Margin="40,20,0,20"/>
 
         </StackPanel>
-
-
+        
     </Grid>
 </Page>
