--- a/MobilReklame/MobilReklame/Views/MainPage.xaml
+++ b/MobilReklame/MobilReklame/Views/MainPage.xaml
@@ -23,6 +23,82 @@
             <RowDefinition Height="104*"/>
         </Grid.RowDefinitions>
 
+        <ScrollViewer Grid.Column="1" Grid.Row="1" HorizontalScrollBarVisibility="Visible">
+            <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="1*"/>
+                <ColumnDefinition Width="1*"/>
+            </Grid.ColumnDefinitions>
+
+            <Grid.RowDefinitions>
+                <RowDefinition Height="793*"/>
+            </Grid.RowDefinitions>
+
+                <Grid.Resources>
+                    <Style TargetType="TextBlock" x:Name="textblocks">
+                        <Setter Property="FontSize" Value="24"/>
+                        <Setter Property="Height" Value="40"/>
+                        <Setter Property="VerticalAlignment" Value="Top"/>
+                        <Setter Property="HorizontalAlignment" Value="Right"/>
+                        <Setter Property="Margin" Value="0,24,20,0"/>
+                    </Style>
+
+                    <Style TargetType="TextBox" x:Name="textboxes">
+                        <Setter Property="FontSize" Value="24"/>
+                        <Setter Property="Width" Value="auto"/>
+                        <Setter Property="VerticalAlignment" Value="top"/>
+                        <Setter Property="HorizontalAlignment" Value="Stretch"/>
+                        <Setter Property="Margin" Value="10,20,40,0"/>
+                        <Setter Property="IsEnabled" Value="False"/>
+                    </Style>
+                </Grid.Resources>
+
+                <StackPanel Grid.Column="0" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+                    <TextBlock Style="{StaticResource textblocks}"/>
+                    
+                    <TextBlock Style="{StaticResource textblocks}" Text="CVR."/>
+                    <TextBlock Style="{StaticResource textblocks}" Text="Firma navn"/>
+                    <TextBlock Style="{StaticResource textblocks}" Text="Tlf nr."/>
+                    <TextBlock Style="{StaticResource textblocks}" Text="E-mail"/>
+                    <TextBlock Style="{StaticResource textblocks}" Text="Kontakt person"/>
+                    <TextBlock Style="{StaticResource textblocks}" Text="Kontakt tlf nr."/>
+                    <TextBlock Style="{StaticResource textblocks}" Text="Kontakt E-mail"/>
+                    <TextBlock Style="{StaticResource textblocks}" Text="Noter"/>
+                    
+                    <TextBlock Style="{StaticResource textblocks}"/>
+
+                    <TextBlock Style="{StaticResource textblocks}" Text="Ordre Nummer" Margin="0,76,20,0"/>
+                    <TextBlock Style="{StaticResource textblocks}" Text="Start Dato"/>
+                    <TextBlock Style="{StaticResource textblocks}" Text="Slut Dato"/>
+                    <TextBlock Style="{StaticResource textblocks}" Text="Forbundet Kunde"/>
+                    <TextBlock Style="{StaticResource textblocks}" Text="Opgave Beskrivelse"/>
+                    <TextBlock Style="{StaticResource textblocks}" Text="Opgave Materialer" Margin="0,70,20,0"/>
+                </StackPanel>
+
+                <StackPanel Grid.Column="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+                    <TextBlock Style="{StaticResource textblocks}" Text="Kunde information" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="28"/>
+
+                    <TextBox x:Name="CVR_" Style="{StaticResource textboxes}" PlaceholderText="CVR." />
+                    <TextBox x:Name="CompanyName" Style="{StaticResource textboxes}" PlaceholderText="Navn"/>
+                    <TextBox x:Name="Tlf_nr_" Style="{StaticResource textboxes}" PlaceholderText="Nummer"/>
+                    <TextBox x:Name="E_mail" Style="{StaticResource textboxes}" PlaceholderText="E-mail"/>
+                    <TextBox x:Name="ContactPerson" Style="{StaticResource textboxes}" PlaceholderText="Navn"/>
+                    <TextBox x:Name="ContactPhoneNr_" Style="{StaticResource textboxes}" PlaceholderText="Nummer"/>
+                    <TextBox x:Name="ContactE_mail" Style="{StaticResource textboxes}" PlaceholderText="E-mail"/>
+                    <TextBox x:Name="Notes" Style="{StaticResource textboxes}" AcceptsReturn="True" TextWrapping="Wrap" PlaceholderText="Noter" Height="100" VerticalAlignment="Stretch"/>
+
+                    <TextBlock Style="{StaticResource textblocks}" Text="Opgave Information" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="28"/>
+
+                    <TextBox x:Name="OrderNumber" Style="{StaticResource textboxes}"/>
+                    <DatePicker x:Name="start" DayFormat="day" MonthFormat="month.numeric" YearFormat="year.abbreviated" HorizontalAlignment="Left" Margin="10,25,10,5"/>
+                    <DatePicker x:Name="End" DayFormat="day" MonthFormat="month.numeric" YearFormat="year.abbreviated" HorizontalAlignment="Left" Margin="10,25,10,5"/>
+                    <TextBox x:Name="CaseDescription" Style="{StaticResource textboxes}"/>
+                    <TextBox x:Name="CaseMaterials" Style="{StaticResource textboxes}" AcceptsReturn="True" TextWrapping="Wrap" PlaceholderText="Noter" Height="100" VerticalAlignment="Stretch"/>
+                    <TextBox x:Name="OrderCustomer" Style="{StaticResource textboxes}" AcceptsReturn="True" TextWrapping="Wrap" PlaceholderText="Noter" Height="100" VerticalAlignment="Stretch"/>
+                </StackPanel>
+            </Grid>
+        </ScrollViewer> 
+            
         <Grid Grid.Column="0" Grid.ColumnSpan="2">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="1*"/>
@@ -48,13 +124,13 @@
 
                 <Button x:Name="NewCase" Content="New Case" Style="{StaticResource TabStyle}" Margin="20,20,0,10" Click="CaseCreation" />
                 <Button x:Name="CustomerLibrary" Content="Customer" Style="{StaticResource TabStyle}" Margin="20,20,0,10" Click="CustomerList"/>
-                <TextBox x:Name="SearchHere" Margin="20,10,0,0" Text="Søg" VerticalAlignment="Center" Width="181" Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"/>
+                <TextBox x:Name="SearchHere" Margin="20,10,0,0" PlaceholderText="Søg" VerticalAlignment="Center" Width="181" Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"/>
                 <Button x:Name="Search" Content="S" Margin="0,10,0,0" Height="32"  VerticalAlignment="Stretch" Width="32" HorizontalAlignment="Center"/>
 
             </StackPanel>
 
             <StackPanel Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Background="LightGray">
-                <ComboBox x:Name="SearchCatagory" HorizontalAlignment="Center" Margin="100,10,0,0" VerticalAlignment="center" Width="240" Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"/>
+                <ComboBox x:Name="SearchCatagory" PlaceholderText="Sortering" HorizontalAlignment="Center" Margin="100,10,0,0" VerticalAlignment="center" Width="240" Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"/>
                 <Button x:Name="Clear" Content="Clear" Margin="10,10,0,0" Height="32" VerticalAlignment="Stretch" MinWidth="85" Width="auto" HorizontalAlignment="Center"/>
             </StackPanel>
 
@@ -70,10 +146,10 @@
                     </Style>
                 </StackPanel.Resources>
 
-                <Button x:Name="Tab1" Content="Button" Style="{StaticResource TabStyle2}" Margin="60,20,0,0"/>
-                <Button x:Name="Tab2" Content="Button" Style="{StaticResource TabStyle2}"/>
-                <Button x:Name="Tab3" Content="Button" Style="{StaticResource TabStyle2}"/>
-                <Button x:Name="Tab4" Content="Button" Style="{StaticResource TabStyle2}"/>
+                <Button x:Name="Tab1" Content="Tab 1" Style="{StaticResource TabStyle2}" Margin="60,20,0,0"/>
+                <Button x:Name="Tab2" Content="Tab 2" Style="{StaticResource TabStyle2}"/>
+                <Button x:Name="Tab3" Content="Tab 3" Style="{StaticResource TabStyle2}"/>
+                <Button x:Name="Tab4" Content="Tab 4" Style="{StaticResource TabStyle2}"/>
             </StackPanel>
         </Grid>
             
