--- a/MobilReklame/MobilReklame/Views/MainPage.xaml
+++ b/MobilReklame/MobilReklame/Views/MainPage.xaml
@@ -91,8 +91,8 @@
                     <TextBlock Style="{StaticResource textblocks}" Text="Opgave Information" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="28"/>
 
                     <TextBox x:Name="OrderNumber" Style="{StaticResource textboxes}"/>
-                    <DatePicker x:Name="start" DayFormat="day" MonthFormat="month.numeric" YearFormat="year.abbreviated" HorizontalAlignment="Left" Margin="10,25,10,5"/>
-                    <DatePicker x:Name="End" DayFormat="day" MonthFormat="month.numeric" YearFormat="year.abbreviated" HorizontalAlignment="Left" Margin="10,25,10,5"/>
+                    <DatePicker x:Name="start" DayFormat="day" MonthFormat="month.numeric" YearFormat="year.abbreviated" HorizontalAlignment="Left" Margin="10,25,10,5" IsEnabled="False"/>
+                    <DatePicker x:Name="End" DayFormat="day" MonthFormat="month.numeric" YearFormat="year.abbreviated" HorizontalAlignment="Left" Margin="10,25,10,5" IsEnabled="False"/>
                     <TextBox x:Name="CaseDescription" Style="{StaticResource textboxes}"/>
                     <TextBox x:Name="CaseMaterials" Style="{StaticResource textboxes}" AcceptsReturn="True" TextWrapping="Wrap" PlaceholderText="Noter" Height="100" VerticalAlignment="Stretch"/>
                     <TextBox x:Name="OrderCustomer" Style="{StaticResource textboxes}" AcceptsReturn="True" TextWrapping="Wrap" PlaceholderText="Noter" Height="100" VerticalAlignment="Stretch"/>
@@ -129,12 +129,9 @@
                 </Button>
 
                 <Button x:Name="CustomerLibrary" Style="{StaticResource TabStyle}" Margin="20,20,0,10" Click="CustomerList">
-                    <StackPanel>
-                        <SymbolIcon Symbol="Contact"/>
-                        <TextBlock Text="Kunde Liste"/>
-                    </StackPanel>                
+                    <SymbolIcon Symbol="Contact"/>
                 </Button>
-                <TextBox x:Name="SearchHere" Margin="20,10,0,0" PlaceholderText="Søg" VerticalAlignment="Center" Width="181" Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"/>
+                <TextBox x:Name="SearchHere" Margin="10,10,0,0" PlaceholderText="Søg" VerticalAlignment="Center" Width="181" Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"/>
                 <Button x:Name="Search" Margin="0,10,0,0" Height="32"  VerticalAlignment="Stretch" Width="40" HorizontalAlignment="Center">
                     <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xE71E;"/>
                 </Button>
@@ -146,7 +143,7 @@
                 <Button x:Name="Clear" Content="Clear" Margin="10,10,0,0" Height="32" VerticalAlignment="Stretch" MinWidth="85" Width="auto" HorizontalAlignment="Center"/>
             </StackPanel>
 
-            <StackPanel Grid.Column="2" Orientation="Horizontal" FlowDirection="RightToLeft" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Background="LightGray">
+            <StackPanel Grid.Column="2" Orientation="Horizontal" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Background="LightGray">
                 <StackPanel.Resources>
                     <Style TargetType="Button" x:Name="TabStyle2">
                         <Setter Property="Height" Value="auto"/>
@@ -181,13 +178,13 @@
             
             <Button x:Name="Delete"  Style="{StaticResource EditDel}" Margin="180,20,0,20">
                 <StackPanel Orientation="Horizontal">
-                    <TextBlock Text="Delete"/>
+                    <TextBlock Text="Slet"/>
                     <SymbolIcon Symbol="Delete"/>
                 </StackPanel>
             </Button>
             <Button x:Name="Edit" Style="{StaticResource EditDel}" Margin="40,20,0,20">
                 <StackPanel Orientation="Horizontal">
-                    <TextBlock Text="Edit"/>
+                    <TextBlock Text="Rediger"/>
                     <SymbolIcon Symbol="Edit"/>
                 </StackPanel>
             </Button>
