--- a/MobilReklame/MobilReklame/Views/Customer List.xaml
+++ b/MobilReklame/MobilReklame/Views/Customer List.xaml
@@ -19,6 +19,27 @@
             <RowDefinition Height="104*"/>
         </Grid.RowDefinitions>
 
+        <Grid.Resources>
+            <Style TargetType="Button" x:Name="TabStyle">
+                <Setter Property="Height" Value="auto"/>
+                <Setter Property="Width" Value="auto"/>
+                <Setter Property="VerticalAlignment" Value="Stretch"/>
+                <Setter Property="MinWidth" Value="85"/>
+                <Setter Property="HorizontalAlignment" Value="Right"/>
+                <Setter Property="Margin" Value="10,20,0,0"/>
+            </Style>
+
+            <Style TargetType="Button" x:Name="EditDel">
+                <Setter Property="Height" Value="auto"/>
+                <Setter Property="Width" Value="150"/>
+                <Setter Property="VerticalAlignment" Value="Stretch"/>
+                <Setter Property="MinWidth" Value="85"/>
+                <Setter Property="HorizontalAlignment" Value="center"/>
+            </Style>
+            
+            
+        </Grid.Resources>
+
         <ScrollViewer Grid.Column="1" Grid.Row="1" HorizontalScrollBarVisibility="Visible">
             <Grid>
                 <Grid.ColumnDefinitions>
@@ -78,17 +99,6 @@
         </ScrollViewer>
 
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Background="LightGray">
-            <StackPanel.Resources>
-                <Style TargetType="Button" x:Name="TabStyle">
-                    <Setter Property="Height" Value="auto"/>
-                    <Setter Property="Width" Value="auto"/>
-                    <Setter Property="VerticalAlignment" Value="Stretch"/>
-                    <Setter Property="MinWidth" Value="85"/>
-                    <Setter Property="HorizontalAlignment" Value="Right"/>
-                    <Setter Property="Margin" Value="10,20,0,0"/>
-                </Style>
-            </StackPanel.Resources>
-
             <Button x:Name="NewCase" Style="{StaticResource TabStyle}" Margin="20,20,0,10" Click="CaseCreation">
                 <SymbolIcon Symbol="Add"/>
             </Button>
@@ -107,32 +117,24 @@
         <StackPanel Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Background="LightGray">
             <ComboBox x:Name="SearchCatagory" PlaceholderText="Sortering" HorizontalAlignment="Center" Margin="100,10,0,0" VerticalAlignment="center" Width="240" Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"/>
             
-            <Button x:Name="Clear" Margin="10,10,0,0" Height="32" VerticalAlignment="Stretch" MinWidth="85" Width="auto" HorizontalAlignment="Center"/>
+            <Button x:Name="Clear" Margin="0,10,0,0" Height="32" VerticalAlignment="Stretch" Width="40" HorizontalAlignment="Center">
+                <SymbolIcon Symbol="Clear"/>
+            </Button>
         </StackPanel>
 
         <ListView x:Name="CaseList" Grid.RowSpan="2" HorizontalAlignment="Stretch" Margin="0,0,0,0" VerticalAlignment="Stretch" Grid.Row="1"/>
 
-
         <StackPanel Orientation="Horizontal" Grid.Column="1" Grid.Row="2" FlowDirection="RightToLeft" Background="LightGray">
-            <StackPanel.Resources>
-                <Style TargetType="Button" x:Name="EditDel">
-                    <Setter Property="Height" Value="auto"/>
-                    <Setter Property="Width" Value="150"/>
-                    <Setter Property="VerticalAlignment" Value="Stretch"/>
-                    <Setter Property="MinWidth" Value="85"/>
-                    <Setter Property="HorizontalAlignment" Value="center"/>
-                </Style>
-            </StackPanel.Resources>
-
-            <Button x:Name="Delete" Style="{StaticResource EditDel}" Margin="180,20,0,20">
+            <Button x:Name="Delete" Style="{StaticResource EditDel}" Margin="50,20,10,20">
                 <StackPanel Orientation="Horizontal">
-                    <TextBlock Text="Slet"/>
+                    <TextBlock Text=" Slet"/>
                     <SymbolIcon Symbol="Delete"/>
                 </StackPanel>
             </Button>
-            <Button x:Name="Edit" Style="{StaticResource EditDel}" Margin="40,20,0,20">
+            
+            <Button x:Name="Edit" Style="{StaticResource EditDel}" Margin="10,20,10,20">
                 <StackPanel Orientation="Horizontal">
-                    <TextBlock Text="Rediger"/>
+                    <TextBlock Text=" Rediger"/>
                     <SymbolIcon Symbol="Edit"/>
                 </StackPanel>
             </Button>
@@ -141,3 +143,4 @@
         
     </Grid>
 </Page>
+
